--- a/environment.yml
+++ b/environment.yml
@@ -20,5 +20,16 @@ dependencies:
   - wheel=0.33.4=py37_0
   - xz=5.2.4=h14c3975_4
   - zlib=1.2.11=h7b6447c_3
+  - pip:
+    - dill==0.3.0
+    - docopt==0.6.2
+    - libvirt-python==5.7.0
+    - multiprocess==0.70.8
+    - pykwalify==1.7.0
+    - python-dateutil==2.8.0
+    - pyyaml==5.1.2
+    - six==1.12.0
+    - zfsr==1.0
+    - zfsretention==1.0
 prefix: /home/brandon/anaconda3/envs/zfsretention
 
